# a-maze-ing

./: .gitignore  Makefile  README.md  checker.py  config_test.txt  out.txt  output_checker.py  parse.py  pyproject.toml  visu.py
UML/: maze_generator_module_class_diagram.xml
mlx/: install.sh
src/: config.txt  main.py
src/generator/: AsciiMazeVisualizer.py  Cell.py  DepthFirstSearchGenerator.py  EDirection.py  GeneratorException.py  Maze.py  MazeGenerator.py  RecursiveDivisionGenerator.py  __init__.py
src/parse/: __init__.py  parse.py
src/visualizer/: Visualizer.py  __init__.py
