[[tool.mypy.overrides]]
module = ["mlx.*", "sortedcontainers.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.poetry]
name = "amazeing"
version = "0.1.0"
description = "Maze generator and visualizer"
authors = ["vquetier"]
readme = "README.md"
packages = [{ include = "generator", from = "src" },
            { include = "visualizer", from = "src" },
            { include = "parse", from = "src" }]
 
[tool.poetry.dependencies]
python = "^3.10"
sortedcontainers = "^2.4.0"
pydantic = "^2.12.5"
mlx = {path = "mlx/mlx-2.2-py3-none-any.whl"}
pynput = "^1.8.1"
 
[tool.poetry.group.dev.dependencies]
flake8 = "^7.0"
mypy = "^1.0"
 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
 
[[tool.mypy.overrides]]
module = ["mlx.*", "sortedcontainers.*", "pynput.*"]
ignore_missing_imports = true
 
[tool.flake8]
max-line-length = 79
exclude = [".venv", "__pycache__", ".mypy_cache"]